feat: complete Phase 3 Step 3 - Google Sheets integration with real-time data persistence, geolocation validation, and test mode functionality

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Google Credentials
+google-credentials.json
