--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-network": "next dev --hostname 0.0.0.0",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "framer-motion": "^10.18.0",
+    "googleapis": "^159.0.0",
     "lucide-react": "^0.263.1",
     "next": "14.2.32",
     "react": "18.3.1",
@@ -19,7 +23,7 @@
     "typescript": "^5"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
