--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.32",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^2.2.0",
     "typescript": "^5"
   },
